--- a/pages/Contacts.html
+++ b/pages/Contacts.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <header>
-        <a href="C:\Users\getpi\OneDrive\Рабочий стол\dla sf2\index.htm">Главная</a>
+        <a href="/index.htm">Главная</a>
         <a href="about.html">О нас</a>
         <a href="#">Контакты</a>  
    </header>
