--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <header>   
-        <a href="/index.htm">Главная</a>
+        <a href="../index.htm">Главная</a>
         <a href="#">О нас</a>
         <a href="contacts.html">Контакты</a>  
    </header>
