--- a/pages/about.html
+++ b/pages/about.html
@@ -8,9 +8,9 @@
 </head>
 <body>
    <header>   
-        <a href="../index.htm">Главная</a>
+        <a href="../index.html">Главная</a>
         <a href="#">О нас</a>
-        <a href="contacts.html">Контакты</a>  
+        <a href="Contacts.html">Контакты</a>  
    </header>
    <main>
     <h1>О нас</h1>
