--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
    <header>   
         <a href="../index.html">Главная</a>
         <a href="#">О нас</a>
-        <a href="Contacts.html">Контакты</a>
+        <a href="contacts.html">Контакты</a>
 
    </header>
    <main>
