--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <header>
         <a href="#">Главная</a>
         <a href="pages/about.html">О нас</a>
-        <a href="pages/contacts.html">Контакты</a>  
+        <a href="contacts.html">Контакты</a>  
    </header>
    <main>
     <!-- содержание -->
