--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- содержание -->
     <h1>Моя первая веб-страница</h1>
     <h2>Про меня</h2>
-    <img src="images/290068574_1068885250423475_3787844351333110667_n.jpg" height="200" width="200">
+    <img src="images/290068574_1068885250423475_3787844351333110667_n.jpg" height="200" width="200" alt="Моё фото">
     <p>Меня завут <strong>Алексей Тишевский</strong>. Я работаю на складе грузчиком. Решил что неплохо было-бы освоить новую деятельность</p>
      <p><i>Сам я родом из Латвии , но живу в Англии. В свободное время играю с друзьями в компьюторные игры и путешествую по разным странам Европы</i></p>
     <h2>Чему я хочу научиться</h2>
